--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 clap = { version = "4.5.56", features = ["derive"] }
 directories = "6.0.0"
+serde = { version = "1.0.228", features = ["derive"] }
+toml = "0.9.11"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
